2001-06-10  Bruno Haible  <haible@clisp.cons.org>

	* ssize_t.m4: New file.
	* unionwait.m4: New file.
	* Makefile.am (EXTRA_DIST): Add them.

2001-06-08  Bruno Haible  <haible@clisp.cons.org>

	* libtool.m4: Upgrade to libtool-1.4.

2001-05-30  Bruno Haible  <haible@clisp.cons.org>

	* gettext.m4 (AM_WITH_NLS): Look only for GNU msgfmt and GNU xgettext.
	Set the variables to ":" if not found.
	* progtest.m4 (AM_PATH_PROG_WITH_TEST): If not found, print "no", not
	the default value.

2001-05-23  Bruno Haible  <haible@clisp.cons.org>

	* gettext-0.10.38 released.

2001-05-23  Bruno Haible  <haible@clisp.cons.org>

	* iconv.m4 (AM_ICONV): Accept --with-libiconv-prefix option.

2001-05-17  Bruno Haible  <haible@clisp.cons.org>

	* gettext.m4 (AM_WITH_NLS): Fix dcgettext test. Always add $LIBICONV
	when using -lintl, because libintl may be a static library depending
	on a (static or shared) libiconv.

2001-05-12  Paul Eggert  <eggert@twinsun.com>

	* gettext.m4 (AM_GNU_GETTEXT): Add check for strtoul.

2001-05-14  Bruno Haible  <haible@clisp.cons.org>

	* gettext.m4 (AM_WITH_NLS): Create po/POTFILES right before
	po/Makefile, at config.status run time. Make it work independently of
	the subdir name and of the subdir level.
	(AM_GNU_GETTEXT): Don't create po/POTFILES at configure time.

2001-05-11  Bruno Haible  <haible@clisp.cons.org>

	* glibc21.m4: New file, from fileutils-4.1.
	* gettext.m4 (AM_GNU_GETTEXT): Require jm_GLIBC21.
	* Makefile.am (EXTRA_DIST): Add glibc21.m4.
	(aclocal_DATA): Add glibc21.m4.

2001-05-04  Bruno Haible  <haible@clisp.cons.org>

	* gettext.m4 (AM_WITH_NLS): Let the GNU gettext package install its
	libintl when a GNU libintl is already preinstalled.

2001-04-30  Bruno Haible  <haible@clisp.cons.org>

	* gettext.m4 (AM_GNU_GETTEXT): Also check for the getegid, geteuid,
	getgid, getuid functions. Needed for mingw32.

2001-04-27  H. J. Lu  <hjl@lucon.org>
            Bruno Haible  <haible@clisp.cons.org>
